force-app/main/default/objects/Attempt__c/Attempt__c.object-meta.xml
<CustomObject>
    <label>Attempt</label>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>Attempt</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attempts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>