force-app/main/default/objects/Attempt__c/fields/Correct_Answers__c.field-meta.xml
<CustomField>
    <fullName>Correct_Answers__c</fullName>
    <label>Correct Answers</label>
    <summaryFilterItems>
        <field>Answer__c.IsCorrect__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Answer__c.Attempt__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>