force-app/main/default/objects/Attempt__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <label>Player</label>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Attempts</relationshipLabel>
    <relationshipName>Attempts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>